hphp/hack/test/typecheck/xhp_attr_spread_4.php.like_types.exp
File "xhp_attr_spread_4.php", line 13, characters 19-20:
Invalid xhp value for attribute :name in :bar (Typing[4343])
File "xhp_attr_spread_4.php", line 8, characters 13-18:
Expected ~?string because it is an unenforceable type
File "xhp_attr_spread_4.php", line 4, characters 13-15:
But got int
