hphp/hack/test/typecheck/xhp_attr_spread_4.php
<?hh // strict

class :foo {
  attribute int name, int age;
}

class :bar extends XHPTest {
  attribute string name;
}

function test(:foo $x): :bar {
  // Name is not compatible across the spread
  return <bar {...$x} />;
}
